[tool.poetry]
name = "radioco-web"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.6"
pyyaml = "^6.0.2"
django-cors-headers = "^4.3.1"
whitenoise = {version = "^6.6.0", extras = ["brotli"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
