[tool.poetry]
name = "radioco-web"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.6"
pyyaml = "^6.0.2"
django-cors-headers = "^4.7.0"
whitenoise = {version = "^6.6.0", extras = ["brotli"]}
django-compressor = "^4.4"
django-csp = "4.0b4"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
